Added map links and added padding
All cards now have a link to relevent google map location and also there
is now padding for each card.

--- a/admin.html
+++ b/admin.html
@@ -94,7 +94,15 @@
                       <div class="card-body py-4">
                         <!--Point Title-->
                         <h5 class="card-title">
-                            Finance Section
+                          Finance Section
+                          <a href="https://goo.gl/maps/N7MP6RCHzWBEji9PA" class="map-link">
+                            <span class="float-end pe-2">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                              </svg>
+                            </span>
+                          </a>
+
                         </h5>
 
                         <!--Point Content-->
@@ -138,9 +146,10 @@
 
                       <!--Point Content-->
                       <p class="card-text">
-                        Everything related to fee related queries, you know where to go! 
-                        This section is part of the MBA block.
-                        
+                        Health Centre was established to promote physical, mental & social well being of the faculty and 
+                        students of the college. Health Centre provides general and preventative health care to our students 
+                        and faculty members. Services of medical practitioners are available to the students throughout day 
+                        and evening. 
                       </p>
                     </div>
                   </div>
