--- a/fun.html
+++ b/fun.html
@@ -54,7 +54,15 @@
                         <div class="card-body py-4">
                           <!--Point Title-->
                           <h5 class="card-title">
-                              Yampa
+                            Yampa
+                          <a href="https://goo.gl/maps/enqQfYDGeceDFq3z5" class="map-link">
+                            <span class="float-end pe-2">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                              </svg>
+                            </span>
+                          </a>
+
                           </h5>
 
                           <!--Point Content-->
@@ -89,6 +97,14 @@
                         <!--Point Title-->
                         <h5 class="card-title">
                             LKB
+                          <a href="https://goo.gl/maps/dXJcFZT98KpYkU2r9" class="map-link">
+                            <span class="float-end pe-2">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                              </svg>
+                            </span>
+                          </a>
+
                         </h5>
 
                         <!--Point Content-->
@@ -121,7 +137,15 @@
                       <div class="card-body py-4">
                         <!--Point Title-->
                         <h5 class="card-title">
-                            Kushi
+                          Kushi
+                          <a href="https://goo.gl/maps/coV7jwFFv5xy9WNa9" class="map-link">
+                            <span class="float-end pe-2">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                              </svg>
+                            </span>
+                          </a>
+
                         </h5>
 
                         <!--Point Content-->
@@ -155,6 +179,14 @@
                         <!--Point Title-->
                         <h5 class="card-title">
                             Sweet Palace
+                            <a href="https://goo.gl/maps/BqKgFZdumo5SLAYRA" class="map-link">
+                            <span class="float-end pe-2">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                              </svg>
+                            </span>
+                          </a>
+
                         </h5>
 
                         <!--Point Content-->
@@ -187,6 +219,14 @@
                         <!--Point Title-->
                         <h5 class="card-title">
                             Mylari
+                          <a href="https://goo.gl/maps/FQNdWHaW7RetPShh7" class="map-link">
+                            <span class="float-end pe-2">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                              </svg>
+                            </span>
+                          </a>
+
                         </h5>
 
                         <!--Point Content-->
@@ -221,6 +261,14 @@
                         <!--Point Title-->
                         <h5 class="card-title">
                             Kannan Bakery
+                          <a href="https://goo.gl/maps/cMSauUtmo3RzteJk8" class="map-link">
+                            <span class="float-end pe-2">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                              </svg>
+                            </span>
+                          </a>
+
                         </h5>
 
                         <!--Point Content-->
@@ -253,6 +301,14 @@
                         <!--Point Title-->
                         <h5 class="card-title">
                             Cafe Frappe
+                          <a href="https://g.page/cafe-frappe-mysuru?share" class="map-link">
+                            <span class="float-end pe-2">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                              </svg>
+                            </span>
+                          </a>
+
                         </h5>
 
                         <!--Point Content-->
@@ -286,6 +342,14 @@
                         <!--Point Title-->
                         <h5 class="card-title">
                             Nescafe
+                          <a href="https://goo.gl/maps/btS6hrAmYgEBWRCe6" class="map-link">
+                            <span class="float-end pe-2">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                              </svg>
+                            </span>
+                          </a>
+
                         </h5>
 
                         <!--Point Content-->
@@ -325,6 +389,14 @@
                         <!--Point Title-->
                         <h5 class="card-title">
                             CS Lawn
+                          <a href="" class="map-link">
+                            <span class="float-end pe-2">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                              </svg>
+                            </span>
+                          </a>
+
                         </h5>
 
                         <!--Point Content-->
@@ -356,6 +428,14 @@
                         <!--Point Title-->
                         <h5 class="card-title">
                           Football Steps/Cricket Ground
+                          <a href="https://goo.gl/maps/D9iCofgvoRiywtsQ9" class="map-link">
+                            <span class="float-end pe-2">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                              </svg>
+                            </span>
+                          </a>
+
                         </h5>
 
                         <!--Point Content-->
@@ -388,6 +468,14 @@
                         <!--Point Title-->
                         <h5 class="card-title">
                           BB Court
+                          <a href="https://goo.gl/maps/R96qUw7YwcScJYHs5" class="map-link">
+                            <span class="float-end pe-2">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                              </svg>
+                            </span>
+                          </a>
+
                         </h5>
 
                         <!--Point Content-->
@@ -419,6 +507,14 @@
                         <!--Point Title-->
                         <h5 class="card-title">
                             Gym
+                          <a href="https://goo.gl/maps/ZGEnXqNgmFkMUWba8" class="map-link">
+                            <span class="float-end pe-2">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                              </svg>
+                            </span>
+                          </a>
+
                         </h5>
 
                         <!--Point Content-->
@@ -451,6 +547,14 @@
                         <!--Point Title-->
                         <h5 class="card-title">
                           Parking Lot 
+                          <a href="https://goo.gl/maps/TXnKity5pH61Np2w8" class="map-link">
+                            <span class="float-end pe-2">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                              </svg>
+                            </span>
+                          </a>
+
                         </h5>
 
                         <!--Point Content-->
@@ -483,6 +587,14 @@
                         <!--Point Title-->
                         <h5 class="card-title">
                           Our college doggus 
+                          <a href="https://goo.gl/maps/enqQfYDGeceDFq3z5" class="map-link">
+                            <span class="float-end pe-2">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                              </svg>
+                            </span>
+                          </a>
+
                         </h5>
 
                         <!--Point Content-->
