--- a/study.html
+++ b/study.html
@@ -81,6 +81,14 @@
                         <!--Point Title-->
                         <h5 class="card-title">
                           Wifi and 2Ps
+                          <a href="https://goo.gl/maps/UgQ1vpjBiW6hvFFY7" class="map-link">
+                            <span class="float-end pe-2">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                              </svg>
+                            </span>
+                          </a>
+
                         </h5>
 
                         <!--Point Content-->
@@ -119,6 +127,14 @@
                         <!--Point Title-->
                         <h5 class="card-title">
                           Reference Section
+                          <a href="https://goo.gl/maps/FL7tA8ZrpAEy5Tw79" class="map-link">
+                            <span class="float-end pe-2">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                              </svg>
+                            </span>
+                          </a>
+
                         </h5>
 
                         <!--Point Content-->
@@ -153,6 +169,14 @@
                         <!--Point Title-->
                         <h5 class="card-title">
                           Supercomputer
+                          <a href="https://goo.gl/maps/UgQ1vpjBiW6hvFFY7" class="map-link">
+                            <span class="float-end pe-2">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                              </svg>
+                            </span>
+                          </a>
+
                         </h5>
 
                         <!--Point Content-->
@@ -184,6 +208,14 @@
                         <!--Point Title-->
                         <h5 class="card-title">
                           Xerox Centre 
+                          <a href="https://goo.gl/maps/1XKenKHAEeLvxfSZ7" class="map-link">
+                            <span class="float-end pe-2">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                              </svg>
+                            </span>
+                          </a>
+
                         </h5>
 
                         <!--Point Content-->
@@ -215,6 +247,14 @@
                         <!--Point Title-->
                         <h5 class="card-title">
                           Stationery Shops
+                          <a href="https://goo.gl/maps/WeynJ1HFGnz4miio9" class="map-link">
+                            <span class="float-end pe-2">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                              </svg>
+                            </span>
+                          </a>
+
                         </h5>
 
                         <!--Point Content-->
@@ -248,6 +288,14 @@
                         <!--Point Title-->
                         <h5 class="card-title">
                           Punjab National Bank AKA PNB
+                          <a href="https://goo.gl/maps/VvmDCeKuVsyxuZ137" class="map-link">
+                            <span class="float-end pe-2">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                              </svg>
+                            </span>
+                          </a>
+
                         </h5>
 
                         <!--Point Content-->
@@ -280,6 +328,14 @@
                         <!--Point Title-->
                         <h5 class="card-title">
                           SJCE Co-operative Society
+                          <a href="https://goo.gl/maps/pALwEpKS6dauwjJJ9" class="map-link">
+                            <span class="float-end pe-2">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                              </svg>
+                            </span>
+                          </a>
+
                         </h5>
 
                         <!--Point Content-->
@@ -313,6 +369,14 @@
                         <!--Point Title-->
                         <h5 class="card-title">
                           Library 
+                          <a href="https://goo.gl/maps/uFHM7p6L1gx1W2Vy7" class="map-link">
+                            <span class="float-end pe-2">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                              </svg>
+                            </span>
+                          </a>
+
                         </h5>
 
                         <!--Point Content-->
@@ -347,6 +411,14 @@
                         <!--Point Title-->
                         <h5 class="card-title">
                           Quadrangle
+                          <a href="https://goo.gl/maps/tTQu1uUbnZrU2Dcu9" class="map-link">
+                            <span class="float-end pe-2">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                              </svg>
+                            </span>
+                          </a>
+
                         </h5>
 
                         <!--Point Content-->
