updated to recent changes

--- a/study.html
+++ b/study.html
@@ -41,7 +41,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="./images/CS_Lawn.jpg" class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/study_page/CS_Lawn.jpg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
@@ -73,7 +73,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="./images/wifi.jpg" class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/study_page/wifi.jpg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
@@ -119,7 +119,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="./images/reference.jpg" class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/study_page/reference.jpg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
@@ -161,7 +161,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="./images/GJB(Super_Computer).jpg" class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/study_page/GJB(Super_Computer).jpg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
@@ -200,7 +200,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="./images/MCV.jpg" class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/study_page/MCV.jpg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
@@ -239,7 +239,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="./images/stationery.jpeg" class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/study_page/stationery.jpeg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
@@ -281,7 +281,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="./images/SJCE_CO-operative_Society.jpg" class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/study_page/SJCE_CO-operative_Society.jpg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
@@ -322,7 +322,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="./images/library.jpeg" class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/study_page/library.jpeg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
@@ -364,7 +364,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="./images/Quadrangle.jpg" class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/study_page/Quadrangle.jpg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
