Added laras cafe, Updated comments

--- a/fun.html
+++ b/fun.html
@@ -48,7 +48,7 @@
         </div>
       </div>
 
-      <!--A Point-->
+      <!--Yampa-->
       <div class="row d-flex justify-content-center p-3">
         <div class="col-md-8">
           <div class="card mb-3">
@@ -103,7 +103,7 @@
         </div>
       </div>
 
-      <!--A Point-->
+      <!--LKB-->
       <div class="row d-flex justify-content-center p-3">
         <div class="col-md-8">
           <div class="card mb-3">
@@ -155,7 +155,7 @@
         </div>
       </div>
 
-      <!--A Point-->
+      <!--Mylari-->
       <div class="row d-flex justify-content-center p-3">
         <div class="col-md-8">
           <div class="card mb-3">
@@ -210,7 +210,56 @@
         </div>
       </div>
 
-      <!--A Point-->
+      <!-- Laras Cafe -->
+      <div class="row d-flex justify-content-center p-3">
+        <div class="col-md-8">
+          <div class="card mb-3">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <!--Image-->
+                <img
+                  src="./images/fun_page/laras_cafe_1.jpg"
+                  class="img-fluid rounded-start"
+                  alt="pic"
+                />
+              </div>
+
+              <div class="col-md-8">
+                <div class="card-body py-4">
+                  <!--Point Title-->
+                  <h5 class="card-title">
+                    Laras Cafe
+                    <a
+                      href="https://goo.gl/maps/FQNdWHaW7RetPShh7"
+                      class="map-link"
+                    >
+                      <span class="float-end pe-2">
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="28"
+                          height="28"
+                          fill="currentColor"
+                          class="bi bi-geo-alt-fill"
+                          viewBox="0 0 16 16"
+                        >
+                          <path
+                            d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"
+                          />
+                        </svg>
+                      </span>
+                    </a>
+                  </h5>
+
+                  <!--Point Content-->
+                  <p class="card-text">😅....</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--Kannan Bakery-->
       <div class="row d-flex justify-content-center p-3">
         <div class="col-md-8">
           <div class="card mb-3">
@@ -264,7 +313,7 @@
         </div>
       </div>
 
-      <!--A Point-->
+      <!--Cafe Frappe-->
       <div class="row d-flex justify-content-center p-3">
         <div class="col-md-8">
           <div class="card mb-3">
@@ -317,7 +366,7 @@
         </div>
       </div>
 
-      <!--A Point-->
+      <!--Nescafe-->
       <div class="row d-flex justify-content-center p-3">
         <div class="col-md-8">
           <div class="card mb-3">
@@ -377,7 +426,7 @@
         </div>
       </div>
 
-      <!--A Point-->
+      <!--CS Lawn-->
       <div class="row d-flex justify-content-center p-3">
         <div class="col-md-8">
           <div class="card mb-3">
@@ -428,7 +477,107 @@
         </div>
       </div>
 
-      <!--A Point-->
+      <!-- MBA Block -->
+      <div class="row d-flex justify-content-center p-3">
+        <div class="col-md-8">
+          <div class="card mb-3">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <!--Image-->
+                <img
+                  src="./images/fun_page/mba_block.jpg"
+                  class="img-fluid rounded-start"
+                  alt="pic"
+                />
+              </div>
+
+              <div class="col-md-8">
+                <div class="card-body py-4">
+                  <!--Point Title-->
+                  <h5 class="card-title">
+                    MBA Block
+                    <a
+                      href="https://goo.gl/maps/A8PTiLpLZrcGeX6B9"
+                      class="map-link"
+                    >
+                      <span class="float-end pe-2">
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="28"
+                          height="28"
+                          fill="currentColor"
+                          class="bi bi-geo-alt-fill"
+                          viewBox="0 0 16 16"
+                        >
+                          <path
+                            d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"
+                          />
+                        </svg>
+                      </span>
+                    </a>
+                  </h5>
+
+                  <!--Point Content-->
+                  <p class="card-text">
+                    <p class="card-text">No Words 😅</p>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Mech Auditorium -->
+      <div class="row d-flex justify-content-center p-3">
+        <div class="col-md-8">
+          <div class="card mb-3">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <!--Image-->
+                <img
+                  src="./images/fun_page/mech_auditorium.jpg"
+                  class="img-fluid rounded-start"
+                  alt="pic"
+                />
+              </div>
+
+              <div class="col-md-8">
+                <div class="card-body py-4">
+                  <!--Point Title-->
+                  <h5 class="card-title">
+                    Mech Auditorium
+                    <a
+                      href="https://goo.gl/maps/A8PTiLpLZrcGeX6B9"
+                      class="map-link"
+                    >
+                      <span class="float-end pe-2">
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="28"
+                          height="28"
+                          fill="currentColor"
+                          class="bi bi-geo-alt-fill"
+                          viewBox="0 0 16 16"
+                        >
+                          <path
+                            d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"
+                          />
+                        </svg>
+                      </span>
+                    </a>
+                  </h5>
+
+                  <!--Point Content-->
+                  <p class="card-text">😅..</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--Football Steps/Cricket Ground-->
       <div class="row d-flex justify-content-center p-3">
         <div class="col-md-8">
           <div class="card mb-3">
@@ -481,7 +630,7 @@
         </div>
       </div>
 
-      <!--A Point-->
+      <!--BB Court-->
       <div class="row d-flex justify-content-center p-3">
         <div class="col-md-8">
           <div class="card mb-3">
@@ -533,7 +682,7 @@
         </div>
       </div>
 
-      <!--A Point-->
+      <!--Gym-->
       <div class="row d-flex justify-content-center p-3">
         <div class="col-md-8">
           <div class="card mb-3">
@@ -586,7 +735,7 @@
         </div>
       </div>
 
-      <!--A Point-->
+      <!--Parking Lot-->
       <div class="row d-flex justify-content-center p-3">
         <div class="col-md-8">
           <div class="card mb-3">
@@ -638,7 +787,7 @@
         </div>
       </div>
 
-      <!--A Point-->
+      <!--Our college doggus-->
       <div class="row d-flex justify-content-center p-3">
         <div class="col-md-8">
           <div class="card mb-3">
